# jid

./: Cargo.toml  README.md  build_app.sh  make_app.sh
assets/icons/: AppIcon.icns
src/: actions.rs  app.rs  config.rs  document.rs  main.rs  theme.rs
src/editor/: view.rs
